# ChinesePokerGame

./: .gitignore  CMakeLists.txt  ChinesePokerGame.sln  README.md  README_zh-cn.md
ChinesePokerGame/: ChinesePokerGame.cpp  ChinesePokerGame.vcxproj  ChinesePokerGame.vcxproj.filters  Hand.cpp  Hand.h  Pattern.cpp  Pattern.h  Tree.cpp  Tree.h  utils.cpp  utils.h
include/PokerSolver/: Card.hpp  Cards.hpp  Hand.hpp  Pattern.hpp
old/: ChinesePokerGame.cpp  Hand.cpp  Hand.h  Pattern.cpp  Pattern.h  Tree.cpp  Tree.h  utils.cpp  utils.h
src/: CMakeLists.txt  Cards.cpp  Hand.cpp  Pattern.cpp  card.h  chinese_poker_game_solver.cpp  hand.h  pattern.h  pool.h  solver.cpp  thread_pool.h  utils.h
test/: CMakeLists.txt  SolverTest.cpp
